--- a/demo/app/demos/off-click/demo.component.html
+++ b/demo/app/demos/off-click/demo.component.html
@@ -1,14 +1,32 @@
-<div (vclOffClick)="offClick()" style="border: 1px solid;background-color:rgb(250, 195, 195);width:300px;height:300px">
+<div
+  (vclOffClick)="offClick()"
+  style="
+    border: 1px solid;
+    background-color: rgb(250, 195, 195);
+    width: 300px;
+    height: 300px;
+  ">
   DIV 1
-  <br><br>
+  <br /><br />
   Click somewhere outside this box to trigger an offClick
-  <div style="border: 1px solid;background-color:rgb(182, 255, 182);width:50%;margin:auto; height:100px">
+  <div
+    style="
+      border: 1px solid;
+      background-color: rgb(182, 255, 182);
+      width: 50%;
+      margin: auto;
+      height: 100px;
+    ">
     DIV 2
-    <br>
+    <br />
     This is a sub-element of DIV 1
   </div>
 </div>
-<br>
-<div *ngIf="clicks > 0"><code>offClick</code>s triggered: {{clicks}}</div>
-<div *ngIf="clicks === 0">Click anywhere to trigger an <code>offClick</code></div>
+<br />
+@if (clicks > 0) {
+  <div><code>offClick</code>s triggered: {{ clicks }}</div>
+}
 
+@if (clicks === 0) {
+  <div>Click anywhere to trigger an <code>offClick</code></div>
+}
