--- a/lib/ng-vcl/src/zoom-box/zoom-box.component.html
+++ b/lib/ng-vcl/src/zoom-box/zoom-box.component.html
@@ -1,8 +1,10 @@
-<div class="zoom-box" [ngStyle]="{
-'position': 'static',
-'background-image': 'url(' + zoomedSource + ')',
-'width': zoomedWidth + 'px',
-'height': zoomedHeight + 'px',
-'background-position-x': '-' + zoomedX + 'px',
-'background-position-y': '-' + zoomedY + 'px'}"></div>
-
+<div
+  class="zoom-box"
+  [ngStyle]="{
+    position: 'static',
+    'background-image': 'url(' + zoomedSource + ')',
+    width: zoomedWidth + 'px',
+    height: zoomedHeight + 'px',
+    'background-position-x': '-' + zoomedX + 'px',
+    'background-position-y': '-' + zoomedY + 'px',
+  }"></div>
