chore: update vcl and fix datalist

--- a/demo/app/demos/data-list/demo.component.html
+++ b/demo/app/demos/data-list/demo.component.html
@@ -4,7 +4,7 @@
       <div>
         <img class="responsive-image" src="https://picsum.photos/180/180" />
       </div>
-      <div class="gutter-margin flex">
+      <div class="gutter-margin flex px-2">
         <div class="row">
           <div class="row center flex">
             <h2 class="m-0">Kitty Cat</h2>
