--- a/demo/styles/fontawesome.scss
+++ b/demo/styles/fontawesome.scss
@@ -1,4 +1,4 @@
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
-@import '@fortawesome/fontawesome-free/scss/fontawesome.scss';
-@import '@fortawesome/fontawesome-free/scss/brands.scss';
-@import '@fortawesome/fontawesome-free/scss/solid.scss';
+@use '@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@use '@fortawesome/fontawesome-free/scss/brands.scss';
+@use '@fortawesome/fontawesome-free/scss/solid.scss';
