--- a/lib/ng-vcl/src/panel/panel.component.html
+++ b/lib/ng-vcl/src/panel/panel.component.html
@@ -1,23 +1,35 @@
 <ng-content select="vcl-panel-header"></ng-content>
-<div class="panel-header no-bg px-0" *ngIf="showCloseButton || hasTitle">
-  <div class="row justify-content-between align-items-center">
-    <ng-content select="vcl-panel-title"></ng-content>
-    <button vcl-button square *ngIf="showCloseButton" type="button" (click)="onCloseClick()" class="transparent">
-      <vcl-icon icon="vcl:close"></vcl-icon>
-    </button>  
+@if (showCloseButton || hasTitle) {
+  <div class="panel-header no-bg px-0">
+    <div class="row justify-content-between align-items-center">
+      <ng-content select="vcl-panel-title"></ng-content>
+      @if (showCloseButton) {
+        <button
+          vcl-button
+          square
+          type="button"
+          (click)="onCloseClick()"
+          class="transparent">
+          <vcl-icon icon="vcl:close"></vcl-icon>
+        </button>
+      }
+    </div>
   </div>
-</div>
+}
+
 <div class="panel-body">
   <div class="panel-content">
     <ng-content></ng-content>
   </div>
 </div>
 <ng-content select="vcl-panel-footer"></ng-content>
-<div class="panel-footer no-bg" *ngIf="hasFooterButtons">
-  <div class="row justify-content-between align-items-center mx-2">
-    <div class="flex"></div>
-    <div class="loose-button-group">
-      <ng-content select="button[vclPanelFooterButton]"></ng-content>
+@if (hasFooterButtons) {
+  <div class="panel-footer no-bg">
+    <div class="row justify-content-between align-items-center mx-2">
+      <div class="flex"></div>
+      <div class="loose-button-group">
+        <ng-content select="button[vclPanelFooterButton]"></ng-content>
+      </div>
     </div>
   </div>
-</div>
+}
